--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <p class="text-faded mb-5" id="tagline">An AI coach who helps you to achieve your goals. Launch in year 2019. Stay tuned.</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#contact">Sign Up</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Sign Up</a>
           </div>
         </div>
       </div>
