use remote servie point, and have close button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 
             <p class="text-faded mb-4">Sign up to be beta testers when it is ready!</p>
 <!-- Begin Mailchimp Signup Form -->
-<form action="https://coach.us14.list-manage.com/subscribe?u=de145912b09007eeae1b898e9&id=edcfc8fb5e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+<!--<form action="https://coach.us14.list-manage.com/subscribe?u=de145912b09007eeae1b898e9&id=edcfc8fb5e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>-->
+<form action="https://betauser.coach.ai/signup" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <!--<div id="mc_embed_signup_scroll">-->
       <div class="container">
         <div class="row">
