--- a/thankyou.html
+++ b/thankyou.html
@@ -46,7 +46,7 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <p class="text-faded mb-5" id="tagline">We will inform you via email when beta version is ready.</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Close</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" onclick="window.close()">Close</a>
           </div>
         </div>
       </div>
