--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 text-center">
               <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                <input type="submit" value="GO" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-success js-scroll-trigger">
+                <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-success js-scroll-trigger">
           </div>
           <div class="col-lg-12 col-md-12 text-center">
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
