added benefits section, changed icons

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
               <a class="nav-link js-scroll-trigger" href="#about">Sign Up</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#benefits">Benefits</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Features</a>
             </li>
           </ul>
@@ -60,7 +63,7 @@
             <!--<br /> <br /> <br /> <br /> <br /> <br />-->
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5" id="tagline">An AI coach who helps you to achieve your goals. Launch in year 2019. Stay tuned.</p>
+            <p class="text-faded mb-5" id="tagline">An AI coach who helps you to achieve your goals. <br> Launching in 2019.</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Sign Up</a>
           </div>
         </div>
@@ -100,6 +103,27 @@
       </div>
     </section>
 
+    <section id="benefits">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">Benefits</h2>
+            <hr class="my-4">
+          </div>
+        </div>
+      </div>
+      <div class="benefit-list">
+        <ul text-align: left;>
+          <li><h4>Get your outcome</h4></li>
+          <li><h4>Prioritize</h4></li>
+          <li><h4>Grow with others</h4></li>
+          <li><h4>Get help from other achievers</h4></li>
+        </ul>
+      </div>
+    </section>
+
+    <hr class="seperation">
+
     <section id="services">
       <div class="container">
         <div class="row">
@@ -120,14 +144,14 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fas fa-4x fa-coffee text-primary mb-3 sr-icon-2"></i>
+              <i class="fas fa-4x fa-comments text-primary mb-3 sr-icon-2"></i>
               <h3 class="mb-3">Ready to Connect</h3>
               <p class="text-muted mb-0">It is not fun if you cannot achive the goals with your family and friends. No friends? Make some here.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fas fa-4x fa-charging-station text-primary mb-3 sr-icon-3"></i>
+              <i class="fas fa-4x fa-map-marker-alt text-primary mb-3 sr-icon-3"></i>
               <h3 class="mb-3">Goal Setting</h3>
               <p class="text-muted mb-0">Your goal, is our goal. AI Coach comes to help.</p>
             </div>
